// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadDefaultRow DOM rendering renders correctly in hidden mode 1`] = `
<tr
  className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
>
  <th
    className="title"
    colSpan="2"
  />
  <th
    className="column-name"
    title="Translated: \\"Test column 1\\""
  />
  <th
    className="margin"
  />
</tr>
`;

exports[`TableHeadDefaultRow DOM rendering renders correctly when collapsable 1`] = `
<tr
  className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
>
  <th
    className="title"
    colSpan="2"
  />
  <th
    className="column-name"
    title="Translated: \\"Test column 1\\""
  >
    TC1
  </th>
  <th
    className="margin"
  />
</tr>
`;

exports[`TableHeadDefaultRow DOM rendering renders correctly when not collapsable 1`] = `
<tr
  className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
>
  <th
    className="title"
    colSpan="2"
  />
  <th
    className="column-name"
    title="Translated: \\"Test column 1\\""
  >
    TC1
  </th>
  <th
    className="margin"
  />
</tr>
`;

exports[`TableHeadDefaultRow DOM rendering renders correctly with many columns 1`] = `
<tr
  className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
>
  <th
    className="title"
    colSpan="2"
  />
  <th
    className="column-name"
    title="Translated: \\"Test column 1\\""
  >
    TC1
  </th>
  <th
    className="column-name"
    title="Translated: \\"Test column 2\\""
  >
    TC2
  </th>
  <th
    className="margin"
  />
</tr>
`;

exports[`TableHeadDefaultRow DOM rendering renders correctly with title 1`] = `
<tr
  className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
>
  <th
    className="title"
    colSpan="2"
  >
    Test title
  </th>
  <th
    className="column-name"
    title="Translated: \\"Test column 1\\""
  >
    TC1
  </th>
  <th
    className="margin"
  />
</tr>
`;

exports[`TableHeadDefaultRow DOM rendering renders correctly without columns 1`] = `
<tr
  className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
>
  <th
    className="title"
    colSpan="2"
  />
  <th
    className="margin"
  />
</tr>
`;
